@@ -1,3 +1,9 @@
+2009-09-22  Gordon Williams <gordon.williams@collabora.co.uk>
+
+	Fixes: NB#139906 - All (non-portrait) dialogs are resized on rotation
+	
+	* src/mb/hd-dialog.c: Add check to stop resizes in portrait mode.
+
 2009-09-22  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>
 
 	Ensure correct creation of texture in hd_launcher_tile_set_icon_name.
